<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">capstone_stage2</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="log_out">Log out</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="your_name">Your Name :</string>
    <string name="phone">Phone :</string>
    <string name="your_degree_is">your max degree is </string>
    <string name="score">Score</string>
    <string name="go_to_categorty">Go to categorty</string>
    <string name="submit">submit</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="save">save</string>
    <string name="image">image</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="choose_difficulty_level">Choose difficulty level ?</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_your_password">forget your password ?</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="click_here_to_register">click here to register</string>
    <string name="no_question">No question</string>
    <string name="register">register</string>
    <string name="trivia_app">Trivia App</string>
    <string name="for_improve_your_level">for improve your level</string>
    <string name="In">in</string>
    <string-array name="names">
        <item>Sports</item>
        <item>Arts</item>
        <item>Animals</item>
        <item>Since &amp; Nature</item>
        <item>Music</item>
        <item>General knowledge</item>
        <item>Books</item>
    </string-array>
    <string-array name="images">
        <item>https://www.thinkwy.org/wp-content/uploads/2017/10/hpfulq-1234.jpg</item>
        <item>https://encoreatlanta.com/wp-content/uploads/2017/10/arts.jpg</item>
        <item>http://www3.canisius.edu/~grandem/animalshabitats/JungleAnimalsBorder.jpg</item>
        <item>https://gfb.global.ssl.fastly.net/wp-content/uploads/2017/06/Mountain_Gfb.jpg</item>
        <item>http://pamis.org.uk/site/uploads/musicworkshop-image.jpg</item>
        <item>https://highwaymail.co.za/wp-content/uploads/sites/50/2016/02/iq-test.jpg </item>
        <item tools:ignore="TypographyDashes">https://www.amnesty.org.uk/files/styles/poster/s3/2018-08/books-548x331.jpg?6_RB5rrWNmvYuI7IRX8j5R0lElIJ7DqP&amp;itok=mgh-vdvG</item>
    </string-array>
    <string-array name="categotyNum">
        <item>21</item>
        <item>25</item>
        <item>27</item>
        <item>17</item>
        <item>12</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
