<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.momen.capstone_stage2.ui.LoginActivity">
    <EditText
        android:id="@+id/userNameLogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:hint="@string/user_name"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/usernamee"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="77dp"
        android:layout_height="59dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/password"
        android:contentDescription="@string/image"
        android:layout_marginLeft="5dp" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/userNameLogin"
        app:layout_constraintTop_toBottomOf="@+id/userNameLogin"
        android:paddingEnd="5dp"
        android:paddingStart="5dp" />

    <TextView
        android:id="@+id/forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/forget_your_password"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
        android:layout_marginRight="15dp" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:onClick="signin"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPass" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />

    <Button
        android:id="@+id/registerLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:onClick="register"
        android:text="@string/click_here_to_register"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</android.support.constraint.ConstraintLayout>
