<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.momen.capstone_stage2.ui.RegisterActivity">
    <EditText
        android:id="@+id/userNameLogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:hint="@string/user_name"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:paddingLeft="5dp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usernamee"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="77dp"
        android:layout_height="59dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/password"
        android:layout_marginLeft="5dp" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/userNameLogin"
        app:layout_constraintTop_toBottomOf="@+id/userNameLogin"
        android:paddingStart="5dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorAccent"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="57dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/phone"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
        android:paddingStart="5dp" />

</android.support.constraint.ConstraintLayout>
