<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.momen.capstone_stage2.ui.ForgetPasswordActivity">

    <EditText
        android:id="@+id/code"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="your code here" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:onClick="submit"
        android:text="@string/submit"
        android:textColor="@android:color/background_light"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code" />

    <EditText
        android:id="@+id/chg_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/chg_pass"
        app:layout_constraintStart_toStartOf="@+id/chg_pass"
        app:layout_constraintTop_toBottomOf="@+id/chg_pass" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:onClick="save"
        android:text="@string/save"
        android:textColor="@android:color/background_light"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass" />
</android.support.constraint.ConstraintLayout>
